--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     "declarationDir": "./src/ts/dec",
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    // "sourceMap": true,                     /* Generates corresponding '.map' file. */
-    "inlineSourceMap": true,
+    "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    // "inlineSourceMap": true,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "./src/js",                        /* Redirect output structure to the directory. */
     "rootDir": "./src/ts",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
